feat: Добавлена целевая страница и обновлены ссылки в файлах README.

--- a/landing/index.html
+++ b/landing/index.html
@@ -53,19 +53,27 @@
                     использованием AI.</p>
 
                 <div class="download-grid">
-                    <a href="https://github.com/LanguageSage/Anki-card-andder/releases/latest"
+                    <a href="https://github.com/nimmaypum-jpg/Anki-card-andder/releases/download/v1.0/Lerne_v1.0_Standard.zip"
                         class="download-card glass-panel btn-wordy-card">
-                        <span class="os-icon">🪟</span>
+                        <span class="os-icon">📦</span>
                         <div class="download-info">
-                            <span class="os-name">Windows Installer</span>
-                            <span class="file-info">v1.5.0 .exe (Рекомендуется)</span>
+                            <span class="os-name">Standard Edition</span>
+                            <span class="file-info">v1.0 .zip (APPDATA)</span>
                         </div>
                     </a>
-                    <a href="https://github.com/LanguageSage/Anki-card-andder" class="download-card glass-panel">
+                    <a href="https://github.com/nimmaypum-jpg/Anki-card-andder/releases/download/v1.0/Lerne_v1.0_Portable.zip"
+                        class="download-card glass-panel btn-wordy-card">
+                        <span class="os-icon">🏃</span>
+                        <div class="download-info">
+                            <span class="os-name">Portable Edition</span>
+                            <span class="file-info">v1.0 .zip (Для USB)</span>
+                        </div>
+                    </a>
+                    <a href="https://github.com/nimmaypum-jpg/Anki-card-andder" class="download-card glass-panel">
                         <span class="os-icon">🐙</span>
                         <div class="download-info">
                             <span class="os-name">GitHub Source</span>
-                            <span class="file-info">Для разработчиков</span>
+                            <span class="file-info">Open Source</span>
                         </div>
                     </a>
                 </div>
